--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 	"symfony/http-kernel": "^4"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2"
+        "friendsofphp/php-cs-fixer": "^2",
+        "phpunit/phpunit": "^8.1"
     },
     "autoload": {
         "psr-4": { "LinkORB\\ObjectStorage\\": "" },
