--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "symfony-bundle",
     "license": "MIT",
     "require": {
-        "linkorb/objectstorage": "^2.4 | < 2.4.2 | > 2.4.2",
+        "linkorb/objectstorage": "^3",
         "symfony/config": "^4",
         "symfony/dependency-injection": "^4",
 	"symfony/http-kernel": "^4"
