--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "symfony-bundle",
     "license": "MIT",
     "require": {
-        "linkorb/objectstorage": "^4.0",
+        "linkorb/objectstorage": "^4.0 || ^5.0",
         "symfony/config": "^4",
         "symfony/dependency-injection": "^4",
         "symfony/http-kernel": "^4"
