--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
     "license": "MIT",
     "require": {
         "linkorb/objectstorage": "^4.0 || ^5.0",
-        "symfony/config": "^4",
-        "symfony/dependency-injection": "^4",
-        "symfony/http-kernel": "^4"
+        "symfony/config": "^4 || ^5.0",
+        "symfony/dependency-injection": "^4 || ^5.0",
+        "symfony/http-kernel": "^4 || ^5.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2",
